--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "apollo-server-express": "^2.4.8",
     "axios": "^0.18.0",
+    "bcrypt": "^3.0.6",
     "express": "^4.16.4",
-    "graphql": "^14.2.1"
+    "graphql": "^14.2.1",
+    "mongoose": "^5.5.3"
   }
 }
