--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "apollo-server-express": "^2.4.8",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.6",
+    "connect-mongo": "^2.0.3",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "graphql": "^14.2.1",
-    "mongoose": "^5.5.3"
+    "mongoose": "^5.5.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
