--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "orochi-server",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "build/app.js",
   "scripts": {
+    "prebuild": "tslint -c tslint.json -p tsconfig.json",
+    "build": "tsc",
+    "prestart": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +26,15 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.11"
+    "@types/express-session": "^1.15.12",
+    "@types/mongoose": "^5.3.27",
+    "@types/passport": "^1.0.0",
+    "@types/connect-mongo": "0.0.41",
+    "@types/express": "^4.16.1",
+    "@types/graphql": "^14.2.0",
+    "@types/node": "^11.13.8",
+    "nodemon": "^1.18.11",
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5"
   }
 }
