--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "build/app.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json",
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "prestart": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/app.js"
+    "start": "nodemon build/app.js"
   },
   "keywords": [],
   "author": "",
@@ -26,13 +26,15 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "@types/express-session": "^1.15.12",
-    "@types/mongoose": "^5.3.27",
-    "@types/passport": "^1.0.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/connect-mongo": "0.0.41",
     "@types/express": "^4.16.1",
+    "@types/express-session": "^1.15.12",
     "@types/graphql": "^14.2.0",
+    "@types/mongoose": "^5.3.27",
     "@types/node": "^11.13.8",
+    "@types/passport": "^1.0.0",
+    "@types/passport-local": "^1.0.33",
     "nodemon": "^1.18.11",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5"
