--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,11 @@ before_install:
 - npm install
 script:
 - npm run build
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
