--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
-    "prestart": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon build/app.js"
+    "start": "nodemon build/app.js",
+    "serve": "npm run build && npm start"
   },
   "keywords": [],
   "author": "",
