--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon build/app.js",
+    "start": "node build/app.js",
     "serve": "npm run build && npm start"
   },
   "keywords": [],
