--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register tests/**/*.ts",
     "start": "node build/app.js",
     "serve": "npm run build && npm start"
   },
@@ -27,15 +27,20 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/chai": "^4.1.7",
     "@types/connect-mongo": "0.0.41",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.12",
     "@types/graphql": "^14.2.0",
+    "@types/mocha": "^5.2.6",
     "@types/mongoose": "^5.3.27",
     "@types/node": "^11.13.8",
     "@types/passport": "^1.0.0",
     "@types/passport-local": "^1.0.33",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
     "nodemon": "^1.18.11",
+    "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5"
   }
