--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
-    "test": "mocha -r ts-node/register tests/**/*.ts",
+    "test": "mocha -r ts-node/register src/**/*.test.ts",
     "start": "node build/app.js",
     "serve": "npm run build && npm start"
   },
@@ -37,9 +37,12 @@
     "@types/node": "^11.13.8",
     "@types/passport": "^1.0.0",
     "@types/passport-local": "^1.0.33",
+    "@types/sinon": "^7.0.11",
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
     "nodemon": "^1.18.11",
+    "sinon": "^7.3.2",
+    "ts-mockito": "^2.3.1",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5"
